[package]
name = "rust-main"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version = "0.8.7", features = ["macros"]}
base64 = "0.22.1"
json = "0.12.4"
rand = "0.9.2"
reqwest = "0.12.24"
serde = "1.0.228"
sqlx = {version = "0.8.6", features = ["sqlite","runtime-tokio"]}
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread","rt"] }
tower-http = { version = "0.6.6", features = ["full"] }
tracing-subscriber = "0.3.20"
